--- a/frontend/hms/package.json
+++ b/frontend/hms/package.json
@@ -11,7 +11,9 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "firebase": "^8.6.5",
+    "framer-motion": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
