--- a/frontend/hms/package.json
+++ b/frontend/hms/package.json
@@ -13,7 +13,10 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
     "firebase": "^8.6.5",
-    "framer-motion": "^2.1.2"
+    "framer-motion": "^2.1.2",
+    "style-loader": "^2.0.0",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
