--- a/frontend/hms/package.json
+++ b/frontend/hms/package.json
@@ -7,16 +7,16 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "css-loader": "^5.2.6",
+    "file-loader": "^6.2.0",
+    "firebase": "^8.6.5",
+    "framer-motion": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "firebase": "^8.6.5",
-    "framer-motion": "^2.1.2",
     "style-loader": "^2.0.0",
-    "css-loader": "^5.2.6",
-    "file-loader": "^6.2.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
