--- a/frontend/hms/package.json
+++ b/frontend/hms/package.json
@@ -11,6 +11,7 @@
     "file-loader": "^6.2.0",
     "firebase": "^8.6.5",
     "framer-motion": "^2.1.2",
+    "jspdf": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
